# discord-rs

./: Cargo.toml
examples/: dj.rs  voice_receive.rs
src/: connection.rs  error.rs  lib.rs  model.rs  voice.rs
